@@ -145,3 +145,10 @@ ul li ol {
     background: -moz-linear-gradient(top, #0072bc, #0054a6);
     background: -webkit-gradient(linear, left top, left bottom, from(#0072bc), to(#0054a6));
 }
+
+#login_window #message {
+    background-color: #EE1C24;
+    border-radius: 10px 10px 10px 10px;
+    margin-top: 42px;
+    text-align: center;
+}
